apps/generic/overlays/k7/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k7
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/kaybi-gh/k7:1.10.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/k7/
            - name: main-volume
              mountPath: /media/tv
              subPath: public/TV
              readOnly: true
            - name: main-volume
              mountPath: /media/movies
              subPath: public/Movies
              readOnly: true
            - name: main-volume
              mountPath: /media/music
              subPath: public/Music
              readOnly: true
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /alive
              port: http
            failureThreshold: 60
            periodSeconds: 5
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /alive
              port: http
            initialDelaySeconds: 300
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 7080
              protocol: TCP
